# omd-rbac-testing

./: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml
config/: example-glossary-governance.json  keytrade-glossary.json  spglobal-domains.json
scripts/: check.sh  get-compose.sh  setup.sh  test-permissions.sh
skill/: SKILL.md
src/omd_rbac/: __init__.py  client.py  preflight.py  setup.py  test_runner.py
