[project]
name = "omd-rbac-testing"
version = "0.1.0"
description = "Config-driven RBAC provisioning and permission testing for OpenMetadata / Collate"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "httpx>=0.27",
]

[project.scripts]
omd-setup = "omd_rbac.setup:main"
omd-test  = "omd_rbac.test_runner:main"
omd-check = "omd_rbac.preflight:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/omd_rbac"]
